enclose menu item text in spans

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -19,13 +19,13 @@
 	<button class='financialChartIndicatorMenuDropDownButton'>Indicators</button>
 	<div class='financialChartIndicatorMenuDropDownMenu'>
     <ul>
-        <li data-value='FinancialOverlayType'>Overlays
+        <li data-value='FinancialOverlayType'><span>Overlays</span>
             <ul>
                 <li data-value='BollingerBands'>BollingerBands</li>
                 <li data-value='PriceChannel'>PriceChannel</li>
             </ul>
         </li>
-        <li data-value='TrendLineType'>Trendlines
+        <li data-value='TrendLineType'><span>Trendlines</span>
             <ul>
 	<li data-value='LinearFit'>LinearFit</li>
 	<li data-value='QuadraticFit'>QuadraticFit</li>
@@ -42,14 +42,14 @@
 	<li data-value='WeightedAverage'>WeightedAverage</li>
             </ul>
         </li>
-        <li data-value='FinancialChartVolumeType'>Volume
+        <li data-value='FinancialChartVolumeType'><span>Volume</span>
             <ul>
 	<li data-value='Column'>Column</li>
 	<li data-value='Line'>Line</li>
 	<li data-value='Area'>Area</li>
             </ul>
         </li>
-        <li data-value='FinancialIndicatorType'>Standalone Indicators
+        <li data-value='FinancialIndicatorType'><span>Standalone Indicators</span>
             <ul>
     <li data-value='AbsoluteVolumeOscillator'>AbsoluteVolumeOscillator</li>
     <li data-value='AccumulationDistribution'>AccumulationDistribution</li>
