Bring back “Auto” option.

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -135,17 +135,17 @@
 </template>
 
 <template class='financialChartTypePicker'>
-	<button class='financialChartTypePickerDropDownButton' data-value="Candle">
+	<button class='financialChartTypePickerDropDownButton' data-value='Auto'>
 		<span class="ui-icon ui-icon-changeable"></span>
 		<span class="ui-icon ui-icon-triangle-1-s"></span>
 	</button>
 
 	<div class='financialChartTypePickerDropDownMenu'>
 		<ul>
-			<!--<li class="financialChartListItem" data-value='Auto'>-->
-			<!--<span class="ui-icon ui-icon-IndicatorsIcon"></span>-->
-			<!--<span>Auto</span>-->
-			<!--</li>-->
+			<li class="financialChartListItem" data-value='Auto'>
+			<span class="ui-icon ui-icon-IndicatorsIcon"></span>
+			<span>Auto</span>
+			</li>
 			<li class="financialChartListItem" data-value='Bar'>
 				<span class="ui-icon ui-icon-BarIcon"></span>
 				<span>Bar</span>
