--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -24,10 +24,16 @@
 	<button class='financialChartIndicatorMenuDropDownButton'>
 		<div class="ui-ChartButtonWrapepr">
 			<span class="ui-icon ui-icon-IndicatorsIcon"></span>
-			<span>Indicators</span>
-			<span class="ui-icon ui-icon-triangle-1-s"></span>
+			<span class="financialChartIndicatorMenulabel">Indicators</span>
+			<span class="ui-icon ui-icon-toolbar-dd"></span>
 		</div>
 	</button>
+
+	<div class="ui-ChartButtonWrapepr">
+		<span class="ui-icon ui-icon-IndicatorsIcon"></span>
+		<span class="financialChartIndicatorMenulabel">Indicators</span>
+		<span class="ui-icon-toolbar-dd"></span>
+	</div>
 
 	<div class='financialChartIndicatorMenuDropDownMenu'>
 		<ul class="financialChartIndicatorMenuDropDownMenuList">
@@ -137,13 +143,13 @@
 <template class='financialChartTypePicker'>
 	<button class='financialChartTypePickerDropDownButton' data-value='Auto'>
 		<span class="ui-icon ui-icon-changeable"></span>
-		<span class="ui-icon ui-icon-triangle-1-s"></span>
+		<span class="ui-icon-toolbar-dd"></span>
 	</button>
 
 	<div class='financialChartTypePickerDropDownMenu'>
 		<ul>
 			<li class="financialChartListItem" data-value='Auto'>
-			<span class="ui-icon ui-icon-IndicatorsIcon"></span>
+			<span class="ui-icon ui-icon-chartAuto"></span>
 			<span>Auto</span>
 			</li>
 			<li class="financialChartListItem" data-value='Bar'>
