corrections to financial chart toolbar templates
move Trendlines category header which was misplaced.
correct class list for toolbar icon dropdown arrow

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -25,7 +25,7 @@
 		<div class="ui-ChartButtonWrapepr">
 			<span class="ui-icon ui-icon-IndicatorsIcon"></span>
 			<span class="financialChartIndicatorMenulabel">Indicators</span>
-			<span class="ui-icon ui-icon-toolbar-dd"></span>
+			<span class="ui-icon-toolbar-dd"></span>
 		</div>
 	</button>
 
@@ -38,9 +38,9 @@
 					<li class="financialChartListItem" data-value='PriceChannel'>PriceChannel</li>
 				</ul>
 			</li>
-			<li>
+			<li data-value='TrendLineType'>
+				<span>Trendlines</span>
 				<ul>
-					<li class="financialChartListItem" data-value='TrendLineType'><span>Trendlines</span>
 					<li class="financialChartListItem" data-value='LinearFit'>LinearFit</li>
 					<li class="financialChartListItem" data-value='QuadraticFit'>QuadraticFit</li>
 					<li class="financialChartListItem" data-value='CubicFit'>CubicFit</li>
