--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -22,7 +22,7 @@
 	<!-- TODO: Make it possible to disply all elements inside the button -->
 
 	<button class='financialChartIndicatorMenuDropDownButton'>
-		<div class="ui-ChartButtonWrapepr">
+		<div class="ui-ChartButtonWrapper">
 			<span class="ui-icon ui-icon-IndicatorsIcon"></span>
 			<span class="financialChartIndicatorMenulabel">Indicators</span>
 			<span class="ui-icon-toolbar-dd"></span>
