--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -19,7 +19,7 @@
 
 <template class='financialChartIndicatorMenu'>
 
-	<!-- TODO: Make it possible to disply all elements inside the button -->
+	<!-- TODO: Make it possible to display all elements inside the button -->
 
 	<button class='financialChartIndicatorMenuDropDownButton'>
 		<div class="ui-ChartButtonWrapper">
