abbreviate and add spaces to financial chart indicator menu items

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -34,26 +34,26 @@
 			<li data-value='FinancialOverlayType'>
 				<span>Overlays</span>
 				<ul>
-					<li class='financialChartListItem' data-value='BollingerBands'>BollingerBands</li>
-					<li class='financialChartListItem' data-value='PriceChannel'>PriceChannel</li>
+					<li class='financialChartListItem' data-value='BollingerBands'>Bollinger Bands</li>
+					<li class='financialChartListItem' data-value='PriceChannel'>Price Channel</li>
 				</ul>
 			</li>
 			<li data-value='TrendLineType'>
 				<span>Trendlines</span>
 				<ul>
-					<li class='financialChartListItem' data-value='LinearFit'>LinearFit</li>
-					<li class='financialChartListItem' data-value='QuadraticFit'>QuadraticFit</li>
-					<li class='financialChartListItem' data-value='CubicFit'>CubicFit</li>
-					<li class='financialChartListItem' data-value='QuarticFit'>QuarticFit</li>
-					<li class='financialChartListItem' data-value='QuinticFit'>QuinticFit</li>
-					<li class='financialChartListItem' data-value='LogarithmicFit'>LogarithmicFit</li>
-					<li class='financialChartListItem' data-value='ExponentialFit'>ExponentialFit</li>
-					<li class='financialChartListItem' data-value='PowerLawFit'>PowerLawFit</li>
-					<li class='financialChartListItem' data-value='SimpleAverage'>SimpleAverage</li>
-					<li class='financialChartListItem' data-value='ExponentialAverage'>ExponentialAverage</li>
-					<li class='financialChartListItem' data-value='ModifiedAverage'>ModifiedAverage</li>
-					<li class='financialChartListItem' data-value='CumulativeAverage'>CumulativeAverage</li>
-					<li class='financialChartListItem' data-value='WeightedAverage'>WeightedAverage</li>
+					<li class='financialChartListItem' data-value='LinearFit'>Linear Fit</li>
+					<li class='financialChartListItem' data-value='QuadraticFit'>Quadratic Fit</li>
+					<li class='financialChartListItem' data-value='CubicFit'>Cubic Fit</li>
+					<li class='financialChartListItem' data-value='QuarticFit'>Quartic Fit</li>
+					<li class='financialChartListItem' data-value='QuinticFit'>Quintic Fit</li>
+					<li class='financialChartListItem' data-value='LogarithmicFit'>Logarithmic Fit</li>
+					<li class='financialChartListItem' data-value='ExponentialFit'>Exponential Fit</li>
+					<li class='financialChartListItem' data-value='PowerLawFit'>PowerLaw Fit</li>
+					<li class='financialChartListItem' data-value='SimpleAverage'>Simple Average</li>
+					<li class='financialChartListItem' data-value='ExponentialAverage'>Exponential Average</li>
+					<li class='financialChartListItem' data-value='ModifiedAverage'>Modified Average</li>
+					<li class='financialChartListItem' data-value='CumulativeAverage'>Cumulative Average</li>
+					<li class='financialChartListItem' data-value='WeightedAverage'>Weighted Average</li>
 				</ul>
 			</li>
 			<li data-value='FinancialChartVolumeType'><span>Volume</span>
@@ -65,40 +65,40 @@
 			</li>
 			<li data-value='FinancialIndicatorType'><span>Standalone Indicators</span>
 				<ul>
-					<li class='financialChartListItem' data-value='AbsoluteVolumeOscillator'>AbsoluteVolumeOscillator</li>
-					<li class='financialChartListItem' data-value='AccumulationDistribution'>AccumulationDistribution</li>
-					<li class='financialChartListItem' data-value='AverageDirectionalIndex'>AverageDirectionalIndex</li>
-					<li class='financialChartListItem' data-value='AverageTrueRange'>AverageTrueRange</li>
-					<li class='financialChartListItem' data-value='BollingerBandWidth'>BollingerBandWidth</li>
-					<li class='financialChartListItem' data-value='ChaikinOscillator'>ChaikinOscillator</li>
-					<li class='financialChartListItem' data-value='ChaikinVolatility'>ChaikinVolatility</li>
-					<li class='financialChartListItem' data-value='CommodityChannelIndex'>CommodityChannelIndex</li>
-					<li class='financialChartListItem' data-value='DetrendedPriceOscillator'>DetrendedPriceOscillator</li>
-					<li class='financialChartListItem' data-value='EaseOfMovement'>EaseOfMovement</li>
-					<li class='financialChartListItem' data-value='FastStochasticOscillator'>FastStochasticOscillator</li>
-					<li class='financialChartListItem' data-value='ForceIndex'>ForceIndex</li>
-					<li class='financialChartListItem' data-value='FullStochasticOscillator'>FullStochasticOscillator</li>
-					<li class='financialChartListItem' data-value='MarketFacilitationIndex'>MarketFacilitationIndex</li>
-					<li class='financialChartListItem' data-value='MassIndex'>MassIndex</li>
-					<li class='financialChartListItem' data-value='MedianPrice'>MedianPrice</li>
-					<li class='financialChartListItem' data-value='MoneyFlowIndex'>MoneyFlowIndex</li>
-					<li class='financialChartListItem' data-value='MovingAverageConvergenceDivergence'>MovingAverageConvergenceDivergence</li>
-					<li class='financialChartListItem' data-value='NegativeVolumeIndex'>NegativeVolumeIndex</li>
-					<li class='financialChartListItem' data-value='OnBalanceVolume'>OnBalanceVolume</li>
-					<li class='financialChartListItem' data-value='PercentagePriceOscillator'>PercentagePriceOscillator</li>
-					<li class='financialChartListItem' data-value='PercentageVolumeOscillator'>PercentageVolumeOscillator</li>
-					<li class='financialChartListItem' data-value='PositiveVolumeIndex'>PositiveVolumeIndex</li>
-					<li class='financialChartListItem' data-value='PriceVolumeTrend'>PriceVolumeTrend</li>
-					<li class='financialChartListItem' data-value='RateOfChangeAndMomentum'>RateOfChangeAndMomentum</li>
-					<li class='financialChartListItem' data-value='RelativeStrengthIndex'>RelativeStrengthIndex</li>
-					<li class='financialChartListItem' data-value='SlowStochasticOscillator'>SlowStochasticOscillator</li>
-					<li class='financialChartListItem' data-value='StandardDeviation'>StandardDeviation</li>
-					<li class='financialChartListItem' data-value='StochRSI'>StochRSI</li>
+					<li class='financialChartListItem' data-value='AbsoluteVolumeOscillator'>Absolute Volume Oscillator</li>
+					<li class='financialChartListItem' data-value='AccumulationDistribution'>Accumulation Distribution</li>
+					<li class='financialChartListItem' data-value='AverageDirectionalIndex'>Average Directional Index</li>
+					<li class='financialChartListItem' data-value='AverageTrueRange'>Average True Range</li>
+					<li class='financialChartListItem' data-value='BollingerBandWidth'>Bollinger Band Width</li>
+					<li class='financialChartListItem' data-value='ChaikinOscillator'>Chaikin Oscillator</li>
+					<li class='financialChartListItem' data-value='ChaikinVolatility'>Chaikin Volatility</li>
+					<li class='financialChartListItem' data-value='CommodityChannelIndex'>Commodity Channel Index</li>
+					<li class='financialChartListItem' data-value='DetrendedPriceOscillator'>Detrended Price Oscillator</li>
+					<li class='financialChartListItem' data-value='EaseOfMovement'>Ease Of Movement</li>
+					<li class='financialChartListItem' data-value='FastStochasticOscillator'>Fast Stochastic Oscillator</li>
+					<li class='financialChartListItem' data-value='ForceIndex'>Force Index</li>
+					<li class='financialChartListItem' data-value='FullStochasticOscillator'>Full Stochastic Oscillator</li>
+					<li class='financialChartListItem' data-value='MarketFacilitationIndex'>Market Facilitation Index</li>
+					<li class='financialChartListItem' data-value='MassIndex'>Mass Index</li>
+					<li class='financialChartListItem' data-value='MedianPrice'>Median Price</li>
+					<li class='financialChartListItem' data-value='MoneyFlowIndex'>Money Flow Index</li>
+					<li class='financialChartListItem' data-value='MovingAverageConvergenceDivergence'>MACD</li>
+					<li class='financialChartListItem' data-value='NegativeVolumeIndex'>Negative Volume Index</li>
+					<li class='financialChartListItem' data-value='OnBalanceVolume'>On Balance Volume</li>
+					<li class='financialChartListItem' data-value='PercentagePriceOscillator'>Percentage Price Oscillator</li>
+					<li class='financialChartListItem' data-value='PercentageVolumeOscillator'>Percentage Volume Oscillator</li>
+					<li class='financialChartListItem' data-value='PositiveVolumeIndex'>Positive Volume Index</li>
+					<li class='financialChartListItem' data-value='PriceVolumeTrend'>Price Volume Trend</li>
+					<li class='financialChartListItem' data-value='RateOfChangeAndMomentum'>ROC</li>
+					<li class='financialChartListItem' data-value='RelativeStrengthIndex'>RSI</li>
+					<li class='financialChartListItem' data-value='SlowStochasticOscillator'>Slow Stochastic Oscillator</li>
+					<li class='financialChartListItem' data-value='StandardDeviation'>Standard Deviation</li>
+					<li class='financialChartListItem' data-value='StochRSI'>Stoch RSI</li>
 					<li class='financialChartListItem' data-value='TRIX'>TRIX</li>
-					<li class='financialChartListItem' data-value='TypicalPrice'>TypicalPrice</li>
-					<li class='financialChartListItem' data-value='UltimateOscillator'>UltimateOscillator</li>
-					<li class='financialChartListItem' data-value='WeightedClose'>WeightedClose</li>
-					<li class='financialChartListItem' data-value='WilliamsPercentR'>WilliamsPercentR</li>
+					<li class='financialChartListItem' data-value='TypicalPrice'>Typical Price</li>
+					<li class='financialChartListItem' data-value='UltimateOscillator'>Ultimate Oscillator</li>
+					<li class='financialChartListItem' data-value='WeightedClose'>Weighted Close</li>
+					<li class='financialChartListItem' data-value='WilliamsPercentR'>Williams %R</li>
 				</ul>
 			</li>
 		</ul>
