fix(editors): remove redundant edit value cache on keydown
(cherry picked from commit d54bfb31f7ee78e0cef1f7bf1289ba3e38437979)

# Conflicts:
#	tests/unit/editors/Bugs/tests.html

--- a/tests/unit/editors/baseEditor/tests.html
+++ b/tests/unit/editors/baseEditor/tests.html
@@ -181,7 +181,10 @@
 			flag = false;
 
 
-
+			// focus first
+			editor.trigger('focus');
+			ok(flag, "focus not fired");
+			flag = false;
 			$('#eventEditor').trigger('keydown');
 			ok(flag, "keydown not fired");
 			flag = false;
@@ -190,9 +193,6 @@
 			flag = false;
 			$('#eventEditor').trigger('keypress');
 			ok(flag, "keypres not fired");
-			flag = false;
-			editor.trigger('focus');
-			ok(flag, "focus not fired");
 			flag = false;
 
 			$('#eventEditor').off("igtexteditorkeydown igtexteditorkeyup igtexteditorkeypress"); 
