--- a/tests/unit/editors/Bugs/tests.html
+++ b/tests/unit/editors/Bugs/tests.html
@@ -1575,6 +1575,43 @@
 				equal($editor.val(), "123_______", "(numeric nullValue) Typing did not update Edit text."); */
 				$editor.remove();
 			});
+
+			testId = 'Bug 256852: textChanged not fired on Safari on MacOS (Grid filtering)';
+			test(testId, function (assert) {
+				assert.expect(2);
+				var done = assert.async(),
+					$editor =  $("<input/>").appendTo("#testBedContainer").igTextEditor(),
+					$field = $editor.igTextEditor("field"),
+					textChangedArgs = [];
+
+				$editor.on("igtexteditortextchanged", function (evt, args) {
+					textChangedArgs.push(args);
+				});
+
+				/* Safari fires composition in the following order:
+					1. compositionstart
+					2. compositionupdate
+					3. input (value assigned to input)
+					4. keydown
+					5. keyup */
+				$field.focus();
+				$field.trigger(jQuery.Event("compositionstart"));
+				$field.trigger(jQuery.Event("compositionupdate"));
+				$field.val("d");
+				$field.trigger(jQuery.Event("input"));
+				$field.trigger(jQuery.Event("keydown"));
+				$field.trigger(jQuery.Event("keyup"));
+
+				assert.equal(textChangedArgs.length, 1, "textChanged should be triggered");
+				assert.equal(textChangedArgs.pop().text, "d", "textChanged arg should be correct");
+
+				$.ig.TestUtil.wait(0) //compositionupdate handler
+				.then(function () {
+					$editor.off("igtexteditortextchanged");
+					$editor.remove();
+					done();
+				});
+			});
 		});
 
 		function emulateKeyBoard(key, ctrl, shift, alt, element) {
