--- a/tests/unit/util/tests.html
+++ b/tests/unit/util/tests.html
@@ -316,6 +316,25 @@
 			equal($.ig.encode("<span id='span1'></span>"), "&lt;span id=&#39;span1&#39;&gt;&lt;/span&gt;", "Should encode span element with attribute and single quote");
 			equal($.ig.encode("<span id=\"span1\"></span>"), "&lt;span id=&#34;span1&#34;&gt;&lt;/span&gt;", "Should encode span element with attribute and double quote")
 		});
+		
+		test("Test arrayCopy1", function() {
+		 	var arr = [0,2,3,4,5];
+			$.ig.util.arrayCopy1(arr, 1, arr, 0, 4);
+			deepEqual(arr, [2,3,4,5,5], "Move content forwards within same array");
+
+			arr = [2,3,4,5,0];
+			$.ig.util.arrayCopy1(arr, 0, arr, 1, 4);
+			deepEqual(arr, [2,2,3,4,5], "Move content back within the same array");
+
+			arr = [1,2,3,4,5];
+			var target = [6,7,8,9,10];
+			$.ig.util.arrayCopy1(arr, 1, target, 0, 4);
+			deepEqual(target, [2,3,4,5,10], "Copy content to the beginning of another array");
+
+			target = [6,7,8,9,10];
+			$.ig.util.arrayCopy1(arr, 0, target, 1, 4);
+			deepEqual(target, [6,1,2,3,4], "Copy content to the end of another array");
+		});
 	</script>
 </head>
 <body>
