adjusting unit test label

--- a/tests/unit/util/tests.html
+++ b/tests/unit/util/tests.html
@@ -376,7 +376,7 @@
 			equal($.ig.Date.prototype.resetDateToCurrentDate(new Date(21/10/2007)).getDate(), new Date().getDate(),  "The date should be reset");
 			equal($.ig.Date.prototype.resetDateToCurrentDate(new Date(null)).getDate(), new Date().getDate(),  "The date should be reset");
 		});
-		test("Test resetDateToCurrentDate", function() {
+		test("Test arrayCopy1", function() {
 		 	var arr = [0,2,3,4,5];
 			$.ig.util.arrayCopy1(arr, 1, arr, 0, 4);
 			deepEqual(arr, [2,3,4,5,5], "Move content forwards within same array");
