fix(igNumericEditor): check allowNullValue = false #1834

--- a/tests/unit/editors/numericEditor/tests.html
+++ b/tests/unit/editors/numericEditor/tests.html
@@ -2591,7 +2591,7 @@
 	}); // IME input numbers
 
 	QUnit.test('Numeric Editor Allow null value should take precedence over min/max values', function (assert) {
-		assert.expect(10);
+		assert.expect(12);
 		var $editor = $('<input/>').appendTo("#testBedContainer").igNumericEditor({
 			dataMode: "int",
 			allowNullValue : true,
@@ -2612,6 +2612,19 @@
 		assert.equal($editor.igNumericEditor("value"), 5, "The value is not correct.");
 		assert.equal($editor.igNumericEditor("displayValue"), "5", "The displayed value is not correct.");
 		$editor.igNumericEditor("destroy");
+
+		$editor = $('<input/>').appendTo("#testBedContainer").igNumericEditor({
+			dataMode: "int",
+			allowNullValue : false,
+			maxValue: 100,
+			minValue: 5,
+			value: null,
+			width: 190
+		});
+		assert.equal($editor.igNumericEditor("value"), 5, "The value is not correct.");
+		assert.equal($editor.igNumericEditor("displayValue"), "5", "The displayed value is not correct.");
+		$editor.igNumericEditor("destroy");
+
 		$editor = $('<input/>').appendTo("#testBedContainer").igNumericEditor({
 			allowNullValue: true,
 			maxValue: 24,
