--- a/tests/unit/knockout/combo/tests.html
+++ b/tests/unit/knockout/combo/tests.html
@@ -498,14 +498,13 @@
 				$comboCont.remove();
 			});
 
-			var testId = '[ID19] Changing data source with data source with the same length but different items';
+			var testId = 'Changing data source with data source with the same length but different items';
 			test(testId, function () {
-				var $comboCont = $("#oneItemDSCont");
-				$comboCont.append($("<span id='combo'></span>").attr("data-bind", "igCombo: { dataSource: oneItemData, textKey: 'name', valueKey: 'id', width: '200', mode: 'dropdown', enableClearButton: false }"));
+				var $comboCont = $("<div></div>").append($("<span id='combo'></span>").attr("data-bind", "igCombo: { dataSource: oneItemData, textKey: 'name', valueKey: 'id', width: '200', mode: 'dropdown', enableClearButton: false }")).appendTo(".test-container");
+				ko.cleanNode($comboCont[0]);
 				ko.applyBindings(globalViewModel, $comboCont[0]);
-				debugger;
+
 				globalViewModel.oneItemData([{id: 6, name: "Item 6"}]);
-				debugger;
 				equal($("#combo").igCombo("option", "dataSource").data()[0].id, 6, "data source not updated");
 				$comboCont.remove();
 			});
@@ -873,8 +872,6 @@
 		}, igComboVisible: isVisibleInvalid" />
 	</div>
 	<div class="clear-floating"></div>
-
-	<div id="oneItemDSCont"></div>
 </div>
 </body>
 </html>
